--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,6 +9,7 @@ Description: R wrapper of the 'tiny-dnn' C++ library for deep learning.
 License: MIT
 Encoding: UTF-8
 LazyData: true
+Depends: methods
 Imports: Rcpp (>= 0.12.9)
 LinkingTo: Rcpp
 SystemRequirements: C++11
