--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,5 +2,4 @@ importFrom(Rcpp, evalCpp)
 useDynLib(tinydnn)
 
 export(net_seq)
-export(layer_fully_connected)
-export(fc)
+export(layer_fully_connected, fc)
