--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,3 +4,4 @@ useDynLib(tinydnn)
 export(net_seq)
 export(layer_fully_connected, fc)
 export(layer_convolutional, conv)
+export(layer_average_pooling, ave_pool)
