--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,10 @@ License: MIT
 Copyright: See file COPYRIGHTS
 Encoding: UTF-8
 LazyData: true
-Depends: methods
-Imports: Rcpp (>= 0.12.9)
+Depends:
+    methods
+Imports:
+    Rcpp (>= 0.12.9)
 LinkingTo: Rcpp
 SystemRequirements: C++11
+RoxygenNote: 5.0.1
