--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,5 +5,6 @@ export(net_seq)
 export(layer_fully_connected, fc)
 export(layer_convolutional, conv)
 export(layer_average_pooling, ave_pool)
+export(layer_max_pooling, max_pool)
 
 exportMethods("%<%")
